--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 *{
   margin: 1.5px;
-  padding: 0;
+  padding: 0 2px;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
