--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body{
         opacity: 0;
         transform: scale(0);
     }
-    10%{
+ /*   10%{
         transform: scale(0.1);
     }
     20%{
@@ -89,7 +89,7 @@ body{
     }
     90%{
         transform: scale(0.9);
-    }
+    } */
     100%{
         opacity: 1;
         transform: scale(1);
